--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,15 @@
   <div class="col-10 col-md-6 text-center container">
     
     <div class="align-items-center d-flex justify-content-center">
-      <%= render 'layouts/portrailt', {profile: @profile_post} %>
+      <% if @profile_post.present? %>
+        <% if @profile_post.portrailt.present? %>
+          <%= image_tag @profile_post.portrailt, class: 'rounded-circle img-fluid m-2 post_portrailt' %>
+        <% else %>
+          <i class="bi bi-person-circle pe-auto m-2" style="font-size: 35px; color: grey;"></i>
+        <% end %>
+      <% else %>
+          <i class="bi bi-person-circle pe-auto m-2" style="font-size: 35px; color: grey;"></i>
+      <% end %>
       <%= link_to "#{@user.profile.username}", users_show_path(@user.profile.username), class: "text-black h4 fw-light mb-0" %>            
     </div>
     
