--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,9 +31,9 @@
       
 
       <div class="col-2 col-md-1 p-0">
-        <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
+        <div class="btn" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
           <i class="bi bi-list" style="font-size: 2rem;"></i>
-        </button>
+        </div>
         <div class="offcanvas offcanvas-end bg-light" data-bs-scroll="true" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="staticBackdropLabel"></h5>
