--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 
   
 <% if params[:q] %>
-  <h3 class="col-12">Search Results "<%= params[:q][:brand_or_frame_cont] %>"</h3>
+  <h3 class="col-12">Search Results "<%= params[:q][:brand_cont] %>"</h3>
   <div class="row row-cols-2 row-cols-md-3">
     <% @search_posts.each do |post| %> 
       <%= render "index_content", post: post %>
