--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
     
       <h2>Sign up</h2>
 
-      <%= form_with model: @user, url: registration_path(resource_name), local: true do |f| %>
+      <%= form_with model: @user, data: { turbo: false }, url: registration_path(resource_name), local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="field mb-3">
