--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -8,7 +8,7 @@
     <%# </h2> %>
     <div>
       <% resource.errors.full_messages.each do |message| %>
-        <p><%= message %></p>
+        <p class="text-danger"><%= message %></p>
       <% end %>
     </div>
   </div>
