--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,7 +42,7 @@
       <hr>  
 
       <h4>Cancel my account</h4>
-      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger" %>
+      <%= button_to "Cancel my account", registration_path(resource_name), data: { turbo_method: :delete ,turbo_confirm: "アカウントを削除してよろしいですか?" }, method: :delete, class:"btn btn-danger" %>
 
       <%= link_to "Back", :back %>
     </div>
