--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,9 @@
+<div class="mt-3 row justify-content-center border">
+<div class="col-md-6 border">
+
 <h2>Change your password</h2>
 
-<%= form_with model: @user, data: { turbo: false }, url: registration_path(resource_name), local: true do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
 
@@ -18,8 +21,11 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", :class => "btn btn-primary btn-lg mt-3 btn-sm" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+</div>
