--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,8 @@
+<div class="mt-3 row justify-content-center">
+<div class="col-md-6 border">
 <h2>Forgot your password?</h2>
 
-<%= form_with model: @user, data: { turbo: false }, url: registration_path(resource_name), local: true do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -9,8 +11,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password instructions", :class => "btn btn-primary btn-lg mt-3 btn-sm" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
