--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-3 row justify-content-center border">
-<div class="col-md-6 border">
+<div class="col-md-6 border bg-light p-3 rounded-2">
 
 <h2>Change your password</h2>
 
