--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
 
             <% if @profile_header.present? %>
               <% if @profile_header.portrailt.present? %>
-                <%= image_tag @profile_header.portrailt, class: 'rounded-circle img-fluid m-2 header_portrailt' %>
+                <%= image_tag @profile_header.portrailt.variant(resize_to_limit: [150, 150]).processed, class: 'rounded-circle img-fluid m-2 header_portrailt' %>
               <% else %>
                 <i class="bi bi-person-circle pe-auto m-2" style="font-size: 35px; color: grey;"></i>
               <% end %>
@@ -67,7 +67,7 @@
 
                 <hr>
                 <p>
-                  <%= link_to 'アカウント設定', "/users/edit", class:"dropdown-item text-black" %>
+                  <%= link_to 'account setting', "/users/edit", class:"dropdown-item text-black" %>
                 </p>
 
                 <p>
@@ -75,7 +75,7 @@
                 </p>
               <% else %>
                 <p>
-                  <%= link_to 'LOGIN', '/users/sign_in', class:"dropdown-item text-black }" %>
+                  <%= link_to 'LOGIN', '/users/sign_in', class:"dropdown-item text-black btn" %>
                 </p>
                 <p>
                   <%= link_to 'SIGNUP', new_user_registration_path, class:"dropdown-item text-black }" %>
