--- a/app/views/posts/_images.html.erb
+++ b/app/views/posts/_images.html.erb
@@ -10,12 +10,12 @@
       <div class="carousel-inner text-center center-block">
         <div class="carousel-item active ">
           <% if @post.images.present? %>
-            <%= image_tag @post.images[0], class: "img-fluid mx-auto d-block ", style: "max-height:100%; width: auto;" %>
+            <%= image_tag @post.images[0].variant(resize_to_limit: [800, 800]).processed, class: "img-fluid mx-auto d-block ", style: "max-height:100%; width: auto;" %>
           <% end %>
         </div><!-- /.carousel-item -->
         <% @post.images.drop(1).each do |image| %>
           <div class="carousel-item ">
-            <%= image_tag image,  class: "img-fluid mx-auto d-block ", style: "max-height:100%; width: auto;" %>
+            <%= image_tag image.variant(resize_to_limit: [800, 800]).processed,  class: "img-fluid mx-auto d-block ", style: "max-height:100%; width: auto;" %>
           </div><!-- /.carousel-item -->
         <% end %>
       </div><!-- /.carousel-inner -->
