--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -3,7 +3,7 @@
       <div class="col-5">
         <div class="float-end object-fit-cover cover">
           <% if @profile.portrailt.present? %>
-            <%= image_tag @profile.portrailt, class: 'rounded-circle img-fluid m-2 show_portrailt' %>
+            <%= image_tag @profile.portrailt.variant(resize_to_limit: [300, 300]).processed, class: 'rounded-circle img-fluid m-2 show_portrailt' %>
           <% else %>
               <i class="bi bi-person-circle pe-auto m-2"  data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 5rem; color: grey;"></i>
           <% end%>
