--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -43,6 +43,7 @@
 
 
     <div class="actions float-right text-center mt-5">
+      <%= link_to "cancel", :back, class: "btn btn-light"%>
       <%= form.submit "submit", :class => "btn btn-primary btn-lg " %>
     </div>
 
